# moretech-hack

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yaml  docker-compose.yml  docker.env.example
.cursor/rules/: forms-with-mutations.mdc
.github/workflows/: ci-backend.yml  ci-frontend.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 000001_init_auth_and_uuid.py  000002_update_candidate_model.py  000003_update_interview_uuid.py  000004_add_gigachat_file_id_to_candidates_and_.py  000005_make_candidate_email_optional.py  000006_add_interview_message.py  000007_add_feedback_fields_to_interview.py  000008_add_new_vacancy_fields.py  000009_add_cv_and_vacancy_extended_fields.py  000009_add_skills_to_candidates.py  000009_add_vacancy_notes.py  000010_add_cv_and_vacancy_extended_fields.py  000010_add_interview_notes.py  000010_cv_experience_years_and_education_list.py  000011_add_interview_state_field.py  000011_add_vacancy_notes.py  000011_increase_employment_type_length.py  000012_cv_experience_years_and_education_list.py  000012_merge_heads_final.py  000013_add_interview_notes.py  000013_add_missing_candidate_and_vacancy_fields.py  000014_merge_heads.py  000015_increase_employment_type_length.py  000016_merge_heads_final.py  000017_add_missing_candidate_and_vacancy_fields.py  000018_add_interview_state_field.py  000019_merge_heads.py  000020_fix_jsonb_conversion_with_proper_data_casting.py  000021_update_enums_to_russian.py  000022_add_document_s3_key.py  000022_add_embedding_tables.py  000023_fix_interview_foreign_key_cascade.py  000024_add_embedding_tables.py  20240904_01_init_auth_and_uuid.py  20250109_01_update_candidate_model.py  20250109_02_make_candidate_email_optional.py  20250906_01_update_interview_uuid.py  20250906_02_add_interview_message.py  2965a21a45b8_merge_heads.py  3a7bf0979312_add_skills_to_candidates.py  (+1 more)
backend/app/: main.py
backend/app/api/: compatibility.py
backend/app/api/routers/: auth.py  candidates.py  interviews.py  users.py  vacancies.py  ws.py
backend/app/clients/: gigachat.py  s3.py  yandex.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  candidate.py  embedding.py  interview.py  interview_message.py  interview_note.py  note.py  user.py  vacancy.py
backend/app/schemas/: common.py  parsing.py
backend/app/services/: auth.py  candidates.py  compatibility_service.py  embedding_service.py  interview_messages.py  interviews.py  pdf_parser.py  skills_llm_service.py  users.py  vacancies.py
backend/docs/: meeting-04-09.md
backend/tests/: conftest.py  test_auth.py  test_candidates_uuid.py  test_download_documents.py  test_gigachat_pdf_parser.py  test_interview_messages.py  test_interview_messages_service.py  test_interviews.py  test_upload_cv.py  test_upload_vacancy_pdf.py  test_users.py
backend/tests/integration/: test_db_container.py
frontend/: .cta.json  Dockerfile  biome.json  index.html  nginx.conf  openapi-ts.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts  styles.css
frontend/src/api/: api-client.ts
frontend/src/api/client/: client.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/: Header.tsx
frontend/src/data/: demo-table-data.ts
frontend/src/hooks/: use-webcam-streaming.ts
frontend/src/lib/: auth.ts  download.ts
frontend/src/routes/: __root.tsx  _protectedLayout.candidates.$candidateId.tsx  _protectedLayout.candidates.tsx  _protectedLayout.tsx  _protectedLayout.vacancies.$vacancyId.tsx  _protectedLayout.vacancies.tsx  _protectedLayout.vaccancies.tsx  candidate.$candidateId.tsx  candidate..tsx  index.tsx  interviews.$interviewId.tsx  sign-in.tsx
(+62 files in other folders)
