[project]
name = "ai-hr-backend"
version = "0.1.0"
description = "AI HR system backend (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "MoreTech Team" }
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "alembic>=1.13.1",
  "pydantic>=2.7.1",
  "pydantic-settings>=2.2.1",
  "asyncpg>=0.29.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "email-validator>=2.2.0",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "testcontainers[postgres]>=4.7.2",
  "ruff>=0.5.0",
  "black>=24.4.2",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"


